--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.0.10
 contextlib2==21.6.0
 Django==4.0
 djangorestframework==3.13.1
+gunicorn==20.1.0
 idna==3.3
 pytz==2021.3
 requests==2.27.1
